<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp"
    android:background="@drawable/rounded_corners_shape"
    android:paddingVertical="8dp"
    android:layout_height="wrap_content">




    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/album_card"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/purple_200"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_image_album_item"
            android:layout_width="64dp"
            android:scaleType="centerCrop"
            android:layout_height="64dp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_track_name"
        app:layout_constraintStart_toEndOf="@id/album_card"
        android:layout_width="0dp"
        style="@style/ItemSongTextStyle"
        android:text="@string/text_track_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/album_card"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tv_track_time"
        style="@style/ItemSongTextStyle"
        android:layout_marginTop="4dp"
        android:textSize="12sp"
        android:textColor="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@id/iv_song_price"
        android:text="@string/text_track_time"
        app:layout_constraintStart_toEndOf="@id/album_card"
        app:layout_constraintTop_toBottomOf="@id/tv_track_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iv_song_price"
        app:layout_constraintStart_toEndOf="@id/album_card"
        android:layout_marginStart="16dp"
        android:layout_width="16dp"
        app:layout_constraintBottom_toBottomOf="@id/album_card"
        app:layout_constraintTop_toBottomOf="@id/tv_track_time"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_price_album_icon"
        android:layout_height="16dp"/>

    <TextView
        android:id="@+id/tv_track_price"
        android:layout_width="0dp"
        android:textSize="12sp"
        android:textColor="@color/purple_200"
        android:layout_marginStart="4dp"
        android:text="@string/text_track_price"
        app:layout_constraintTop_toTopOf="@id/iv_song_price"
        app:layout_constraintBottom_toBottomOf="@id/iv_song_price"
        app:layout_constraintStart_toEndOf="@id/iv_song_price"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>